# ChatGpt

./: .encryption_key  .env.example  .gitignore  AZURE_COSMOS_SETUP.md  AZURE_DEPLOYMENT.md  DEPLOYMENT_TROUBLESHOOTING.md  MIGRATION_GUIDE.md  MODEL_CONFIGURATION_SUMMARY.md  MONGODB_SETUP.md  POSTGRESQL_SETUP.md  PROJECT_STRUCTURE.md  Procfile  TTL_CONFIGURATION.md  app.py  app_azure.py  app_flask.py  app_simple.py  check_postgresql.py  check_schema.py  check_threads.py  config.py  database.py  fix_permissions.py  health_check.py  migrate_to_postgresql.py  model_config.ini  news_fetcher.py  openai_assistant_manager.py  pyproject.toml  requirements.txt  reset_postgres_password.bat  run_migration.bat  setup_database_simple.bat  sharepoint_logger.py  simple_chat.py  start.sh  startup.py  startup.sh  test_api_user.py  test_azure_env.py  (+10 more)
.streamlit/: config.toml
auth/: auth_helper.py  routes.py
backend/: app.py  app_simple.py  auth.py  config.py  database.py  main.py  models.py  requirements.txt
config/: .env.azure.example  .env.example  .env.production  README.md  config.py  model_config.ini  model_config.json  web.config
database/: POSTGRESQL_SETUP_GUIDE.md  README.md  database_multiuser.py  install_postgresql.bat  migrate_database.py  verify_postgresql.bat
deployment/: README.md  deploy.cmd  setup_database.bat  startup.sh
docs/: CURRENT_API_AND_WEB_SEARCH.md  EXTERNAL_CONFIGURATION_GUIDE.md  OPENAI_API_DOCUMENTATION.md  README.md
scripts/: README.md  check_db.py  fix_user_ids.py  startup_diagnostic.py
templates/: base_template.html  index.html
(+9 files in other folders)
