[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-clone"
version = "1.0.0"
description = "A modern ChatGPT clone built with Streamlit"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "pymongo>=4.5.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
